fixed lesson emojis not showing

--- a/src/Reflections/ReflectionPrompts/evaluation/paidia/topics/_paidia-evaluation-topics.scss
+++ b/src/Reflections/ReflectionPrompts/evaluation/paidia/topics/_paidia-evaluation-topics.scss
@@ -9,4 +9,10 @@
 
 .paidia-lesson-rating {
 	font-size: 30px;
+	text-align: center;
+}
+
+.paidia-summary-icon {
+	display: grid;
+	grid-template-columns: 50px 1fr;
 }
